--- a/deep-learing/step-01.ipynb
+++ b/deep-learing/step-01.ipynb
@@ -305,7 +305,7 @@
     "\n",
     "$y = h(a)$\n",
     "\n",
-    "TODO: 加图\n"
+    "![image](https://github.com/dikers/serverless/blob/master/doc/picture/41.jpg?raw=true)\n"
    ]
   },
   {
