--- a/deep-learning/step-02.ipynb
+++ b/deep-learning/step-02.ipynb
@@ -273,7 +273,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 利用微分求导数 (拉格朗日中值定理)"
+    "### 利用微分求导数 (拉格朗日中值定理)\n",
+    "![image](https://github.com/dikers/machine-learn/blob/master/deep-learning/image/008.png?raw=true)"
    ]
   },
   {
