添加学习资料

--- a/python/01-python-basic.ipynb
+++ b/python/01-python-basic.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Python 基础语法"
+    "##  Python 基础语法\n",
+    "\n",
+    "[python 基础教程 http://www.pythondoc.com/pythontutorial3/appetite.html](http://www.pythondoc.com/pythontutorial3/appetite.html)\n",
+    "\n",
+    "[机器学习实战 https://book.douban.com/subject/24703171/](https://book.douban.com/subject/24703171/)\n",
+    "\n",
+    "[机器学习实战：基于Scikit-Learn和TensorFlow https://book.douban.com/subject/30317874/](https://book.douban.com/subject/30317874/)\n",
+    "\n",
+    "[深度学习入门 https://book.douban.com/subject/30270959/](https://book.douban.com/subject/30270959/)\n",
+    "\n",
+    "[Python 深度学习 https://book.douban.com/subject/30293801/](https://book.douban.com/subject/30293801/)\n",
+    "\n"
    ]
   },
   {
