--- a/deep-learning/step-05.ipynb
+++ b/deep-learning/step-05.ipynb
@@ -686,13 +686,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras import optimizers\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Conv2D, Dense, Flatten, MaxPooling2D\n",
+    "from keras.layers import Conv2D, Dense, Flatten, MaxPooling2D, Dropout\n",
     "from keras.callbacks import LearningRateScheduler, TensorBoard\n",
     "import cv2\n",
     "import os\n",
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,19 +871,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Dropout' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-136-58b06a8672a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# build network\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-134-45362f09b230>\u001b[0m in \u001b[0;36mbuild_model\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaxPooling2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstrides\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFlatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m120\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'relu'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_initializer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'he_normal'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Dropout' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W1107 16:07:23.853793 140063343695680 deprecation.py:506] From /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_31 (Conv2D)           (None, 136, 136, 6)       456       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_31 (MaxPooling (None, 68, 68, 6)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_32 (Conv2D)           (None, 64, 64, 16)        2416      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_32 (MaxPooling (None, 32, 32, 16)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_16 (Flatten)         (None, 16384)             0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 16384)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_43 (Dense)             (None, 120)               1966200   \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 120)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_44 (Dense)             (None, 84)                10164     \n",
+      "_________________________________________________________________\n",
+      "dense_45 (Dense)             (None, 3)                 255       \n",
+      "=================================================================\n",
+      "Total params: 1,979,491\n",
+      "Trainable params: 1,979,491\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "Train on 461 samples, validate on 116 samples\n",
+      "Epoch 1/10\n",
+      "461/461 [==============================] - 8s 17ms/step - loss: 0.9945 - acc: 0.5683 - val_loss: 0.2373 - val_acc: 1.0000\n",
+      "Epoch 2/10\n",
+      "461/461 [==============================] - 7s 16ms/step - loss: 0.2168 - acc: 0.9458 - val_loss: 0.0034 - val_acc: 1.0000\n",
+      "Epoch 3/10\n",
+      "461/461 [==============================] - 7s 16ms/step - loss: 0.0258 - acc: 0.9935 - val_loss: 3.0375e-04 - val_acc: 1.0000\n",
+      "Epoch 4/10\n",
+      "461/461 [==============================] - 7s 16ms/step - loss: 0.0219 - acc: 0.9913 - val_loss: 2.3306e-04 - val_acc: 1.0000\n",
+      "Epoch 5/10\n",
+      "461/461 [==============================] - 7s 16ms/step - loss: 0.0032 - acc: 1.0000 - val_loss: 1.5288e-04 - val_acc: 1.0000\n",
+      "Epoch 6/10\n",
+      "461/461 [==============================] - 7s 16ms/step - loss: 0.0023 - acc: 1.0000 - val_loss: 2.7654e-05 - val_acc: 1.0000\n",
+      "Epoch 7/10\n",
+      "461/461 [==============================] - 7s 16ms/step - loss: 0.0041 - acc: 0.9978 - val_loss: 4.1753e-05 - val_acc: 1.0000\n",
+      "Epoch 8/10\n",
+      "461/461 [==============================] - 7s 16ms/step - loss: 0.0047 - acc: 1.0000 - val_loss: 4.3730e-05 - val_acc: 1.0000\n",
+      "Epoch 9/10\n",
+      "461/461 [==============================] - 7s 16ms/step - loss: 0.0023 - acc: 1.0000 - val_loss: 1.8523e-05 - val_acc: 1.0000\n",
+      "Epoch 10/10\n",
+      "461/461 [==============================] - 7s 16ms/step - loss: 0.0012 - acc: 1.0000 - val_loss: 7.6030e-06 - val_acc: 1.0000\n",
+      "socre 100.0 \n"
      ]
     }
    ],
