--- a/deep-learning/step-06.ipynb
+++ b/deep-learning/step-06.ipynb
@@ -660,9 +660,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow_p36]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow_p36-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -674,9 +674,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
