--- a/deep-learning/step-05.ipynb
+++ b/deep-learning/step-05.ipynb
@@ -17,24 +17,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('tv-icon-dataset-original.zip', <http.client.HTTPMessage at 0x7fa9781ae290>)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import urllib \n",
+    "\n",
+    "urllib.request.urlretrieve('https://s3.amazonaws.com/dikers.nwcd/data-set/tv-icon-dataset-original.zip', \"tv-icon-dataset-original.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-11-07 15:31:57--  http://dikers.nwcd.s3-website-us-east-1.amazonaws.com/data-set/tv-icon-dataset-original.zip\n",
-      "Resolving dikers.nwcd.s3-website-us-east-1.amazonaws.com (dikers.nwcd.s3-website-us-east-1.amazonaws.com)... 52.216.19.50\n",
-      "Connecting to dikers.nwcd.s3-website-us-east-1.amazonaws.com (dikers.nwcd.s3-website-us-east-1.amazonaws.com)|52.216.19.50|:80... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 2120193 (2.0M) [application/zip]\n",
-      "Saving to: ‘tv-icon-dataset-original.zip’\n",
-      "\n",
-      "tv-icon-dataset-ori 100%[===================>]   2.02M  25.9KB/s    in 1m 49s  \n",
-      "\n",
-      "2019-11-07 15:33:47 (19.0 KB/s) - ‘tv-icon-dataset-original.zip’ saved [2120193/2120193]\n",
-      "\n",
       "Archive:  ./tv-icon-dataset-original.zip\n",
       "   creating: tv-icon-dataset-original/\n",
       "   creating: tv-icon-dataset-original/cctv13/\n",
@@ -51,7 +62,6 @@
       "  inflating: tv-icon-dataset-original/cctv13/148.JPG  \n",
       "  inflating: tv-icon-dataset-original/cctv13/158.JPG  \n",
       "  inflating: tv-icon-dataset-original/cctv13/.DS_Store  \n",
-      "   creating: __MACOSX/\n",
       "   creating: __MACOSX/tv-icon-dataset-original/\n",
       "   creating: __MACOSX/tv-icon-dataset-original/cctv13/\n",
       "  inflating: __MACOSX/tv-icon-dataset-original/cctv13/._.DS_Store  \n",
@@ -637,7 +647,6 @@
     }
    ],
    "source": [
-    "!wget http://dikers.nwcd.s3-website-us-east-1.amazonaws.com/data-set/tv-icon-dataset-original.zip\n",
     "!unzip  ./tv-icon-dataset-original.zip\n",
     "!rm ./tv-icon-dataset-original.zip\n",
     "!mv tv-icon-dataset-original ./data/tv-icon-dataset-original\n",
