--- a/Polynomial-Regression/05-Learning-Curve-Copy1.ipynb
+++ b/Polynomial-Regression/05-Learning-Curve-Copy1.ipynb
@@ -55,6 +55,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import xgboost as xgb\n",
+    "# # read in data\n",
+    "# dtrain = xgb.DMatrix('demo/data/agaricus.txt.train')\n",
+    "# dtest = xgb.DMatrix('demo/data/agaricus.txt.test')\n",
+    "# # specify parameters via map\n",
+    "# param = {'max_depth':2, 'eta':1, 'objective':'binary:logistic' }\n",
+    "# num_round = 2\n",
+    "# bst = xgb.train(param, dtrain, num_round)\n",
+    "# # make prediction\n",
+    "# preds = bst.predict(dtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -222,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
