--- a/tensorflow/08_tf_generate_csv.ipynb
+++ b/tensorflow/08_tf_generate_csv.ipynb
@@ -530,7 +530,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow_p36] *",
+   "display_name": "Python [conda env:tensorflow_p36]",
    "language": "python",
    "name": "conda-env-tensorflow_p36-py"
   },
