添加 线性代数库

--- a/Linear-Algebra/02-Matrix.ipynb
+++ b/Linear-Algebra/02-Matrix.ipynb
@@ -9,16 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPSILON = 1e-8"
+    "EPSILON = 1e-8\n",
+    "\n",
+    "def is_zero(x):\n",
+    "    return abs(x) < EPSILON\n",
+    "\n",
+    "\n",
+    "def is_equal(a, b):\n",
+    "    return abs(a - b) < EPSILON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,84 +210,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LinearSystem:\n",
-    "    \n",
+    "\n",
     "    def __init__(self, A, b):\n",
-    "        assert A.row_num() == len(b), \\\n",
-    "        \"\"\"row number of A must be equal to the length b\"\"\"\n",
-    "        \n",
+    "\n",
+    "        assert A.row_num() == len(b), \"row number of A must be equal to the length of b\"\n",
     "        self._m = A.row_num()\n",
     "        self._n = A.col_num()\n",
-    "        \n",
-    "        assert self._m == self._n, \\\n",
-    "        \"\"\"必须是方阵 TODO\"\"\"\n",
-    "        \n",
-    "        self.Ab = [Vector(A.row_vector(i).underlying_list() + [b[i]])\n",
-    "                  for i in range(self._m)]\n",
-    "        \n",
-    "    def gauss_jordan_elimination(self):\n",
-    "        \n",
-    "        self._forward()\n",
-    "        self._backward()\n",
-    "   \n",
-    "    def _max_row(self, index, n ):\n",
-    "        best, ret = self.Ab[index][index], index\n",
-    "        \n",
-    "        for i in range(index + 1, n):\n",
-    "            if self.Ab[i][index]<best:\n",
-    "                best, ret = self.Ab[i][index], i\n",
-    "        return ret        \n",
-    "        \n",
-    "        \n",
+    "\n",
+    "        if isinstance(b, Vector):\n",
+    "            self.Ab = [Vector(A.row_vector(i).underlying_list() + [b[i]])\n",
+    "                        for i in range(self._m)]\n",
+    "        if isinstance(b, Matrix):\n",
+    "            self.Ab = [Vector(A.row_vector(i).underlying_list() + b.row_vector(i).underlying_list())\n",
+    "                       for i in range(self._m)]\n",
+    "        self.pivots = []\n",
+    "\n",
+    "    def _max_row(self, index_i, index_j, n):\n",
+    "\n",
+    "        best, ret = abs(self.Ab[index_i][index_j]), index_i\n",
+    "        for i in range(index_i + 1, n):\n",
+    "            if abs(self.Ab[i][index_j]) > best:\n",
+    "                best, ret = abs(self.Ab[i][index_j]), i\n",
+    "        return ret\n",
+    "\n",
     "    def _forward(self):\n",
-    "        \n",
-    "        n = self._m\n",
-    "        \n",
-    "        for i in range(n):\n",
-    "            #Ab[i][i]为主元\n",
-    "            max_row = self._max_row(i, n)\n",
+    "\n",
+    "        i, k = 0, 0\n",
+    "        while i < self._m and k < self._n:\n",
+    "            # 看Ab[i][k]位置是否可以是主元\n",
+    "            max_row = self._max_row(i, k, self._m)\n",
     "            self.Ab[i], self.Ab[max_row] = self.Ab[max_row], self.Ab[i]\n",
     "\n",
-    "            self.Ab[i] = self.Ab[i] / self.Ab[i][i]\n",
-    "            \n",
-    "            for j in range(i+1, n):\n",
-    "                self.Ab[j] = self.Ab[j]- self.Ab[j][i] * self.Ab[i]\n",
-    "                \n",
-    "                \n",
+    "            if is_zero(self.Ab[i][k]):\n",
+    "                k += 1\n",
+    "            else:\n",
+    "                # 将主元归为一\n",
+    "                self.Ab[i] = self.Ab[i] / self.Ab[i][k]\n",
+    "                for j in range(i + 1, self._m):\n",
+    "                    self.Ab[j] = self.Ab[j] - self.Ab[j][k] * self.Ab[i]\n",
+    "                self.pivots.append(k)\n",
+    "                i += 1\n",
+    "\n",
     "    def _backward(self):\n",
-    "        \n",
-    "        n = self._m\n",
-    "        \n",
-    "        for i in range(n-1, -1, -1):\n",
-    "            for j in range(i-1, -1, -1):\n",
-    "                self.Ab[j] = self.Ab[j] - self.Ab[j][i] * self.Ab[i]\n",
-    "                \n",
+    "\n",
+    "        n = len(self.pivots)\n",
+    "        for i in range(n - 1, -1, -1):\n",
+    "            k = self.pivots[i]\n",
+    "            # Ab[i][k]为主元\n",
+    "            for j in range(i - 1, -1, -1):\n",
+    "                self.Ab[j] = self.Ab[j] - self.Ab[j][k] * self.Ab[i]\n",
+    "\n",
+    "    def gauss_jordan_elimination(self):\n",
+    "        \"\"\"如果有解，返回True；如果没有解，返回False\"\"\"\n",
+    "        self._forward()\n",
+    "        self._backward()\n",
+    "\n",
+    "        for i in range(len(self.pivots), self._m):\n",
+    "            if not is_zero(self.Ab[i][-1]):\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
     "    def fancy_print(self):\n",
+    "\n",
     "        for i in range(self._m):\n",
-    "            print(\" \\t\".join(str(self.Ab[i][j])  for j in range(self._n)), end=\" \")\n",
+    "            print(\" \".join(str(self.Ab[i][j]) for j in range(self._n)), end=\" \")\n",
     "            print(\"|\", self.Ab[i][-1])\n",
-    "            "
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inv(A):\n",
+    "    if A.row_num() != A.col_num():\n",
+    "        return None\n",
+    "\n",
+    "    n = A.row_num()\n",
+    "    ls = LinearSystem(A, Matrix.identity(n))\n",
+    "    if not ls.gauss_jordan_elimination():\n",
+    "        return None\n",
+    "\n",
+    "    invA = [[row[i] for i in range(n, 2*n)] for row in ls.Ab]\n",
+    "    return Matrix(invA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 \t2 \t4 | 7\n",
-      "3 \t7 \t2 | -11\n",
-      "2 \t3 \t3 | 1\n",
-      "1.0 \t0.0 \t0.0 | -1.0\n",
-      "0.0 \t1.0 \t0.0 | -2.0\n",
-      "-0.0 \t-0.0 \t1.0 | 3.0\n"
+      "1 2 4 | 7\n",
+      "3 7 2 | -11\n",
+      "2 3 3 | 1\n",
+      "1.0 0.0 6.29126380620922e-16 | -0.9999999999999991\n",
+      "0.0 1.0 -2.220446049250313e-16 | -2.0000000000000004\n",
+      "0.0 0.0 0.9999999999999999 | 2.999999999999999\n"
      ]
     }
    ],
@@ -291,7 +327,29 @@
     "ls = LinearSystem(A, b)\n",
     "ls.fancy_print()\n",
     "ls.gauss_jordan_elimination()\n",
-    "ls.fancy_print()"
+    "ls.fancy_print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([[1.0, 0.0], [-8.881784197001256e-16, 1.0000000000000004]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = Matrix([[1,2],[3,4]])\n",
+    "inv(A)\n",
+    "inv(A.dot(inv(A)))"
    ]
   },
   {
@@ -610,29 +668,6 @@
    "source": [
     "math.atan(0.0663603042776757) * 180 / math.pi"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-65100f82b712>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36minv\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    542\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    543\u001b[0m     \"\"\"\n\u001b[0;32m--> 544\u001b[0;31m     \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwrap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_makearray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    545\u001b[0m     \u001b[0m_assertRankAtLeast2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    546\u001b[0m     \u001b[0m_assertNdSquareness\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36m_makearray\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_makearray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m     \u001b[0mnew\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m     \u001b[0mwrap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"__array_prepare__\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__array_wrap__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnew\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwrap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36masarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    536\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    537\u001b[0m     \"\"\"\n\u001b[0;32m--> 538\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    539\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-e2933350c22f>\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, pos)\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0;34m\"\"\"返回pos位置的元素\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m         \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
