--- a/tensorflow/09_rnn_embedding.ipynb
+++ b/tensorflow/09_rnn_embedding.ipynb
@@ -208,7 +208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow_p36] *",
+   "display_name": "Python [conda env:tensorflow_p36]",
    "language": "python",
    "name": "conda-env-tensorflow_p36-py"
   },
