--- a/deep-learning/step-01.ipynb
+++ b/deep-learning/step-01.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,24 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据下载路径:  http://dikers-html.s3-website.cn-northwest-1.amazonaws.com.cn/data/\n",
+      "数据下载路径:  https://dikers-html.s3.cn-northwest-1.amazonaws.com.cn/data/\n",
       "数据保存路径:  ./\n",
-      "file exist:  mnist.pkl.gz\n",
-      "file exist:  sample_weight.pkl\n"
+      "Downloading mnist.pkl.gz ... \n",
+      "Done\n",
+      "Downloading sample_weight.pkl ... \n",
+      "Done\n"
      ]
     }
    ],
    "source": [
     "\n",
     "\n",
-    "url_base = 'http://dikers-html.s3-website.cn-northwest-1.amazonaws.com.cn/data/'\n",
+    "url_base = 'https://dikers-html.s3.cn-northwest-1.amazonaws.com.cn/data/'\n",
     "# 数据保存的路径\n",
     "dataset_dir = './'\n",
     "\n",
@@ -883,9 +885,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
